--- a/post copy.html
+++ b/post copy.html
@@ -14,7 +14,7 @@
         <h1>PersonalReadingBlog</h1>
 
         <ul class="nav">
-            <li><a href="main.html">Homepage</a></li>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="#">Posts</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
