--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <h1>PersonalReadingBlog</h1>
 
         <ul class="nav">
-            <li><a href="main.html">Homepage</a></li>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="post copy.html">Posts</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
