--- a/post copy.html
+++ b/post copy.html
@@ -94,7 +94,7 @@
         <div class="julie">
             <div class="about">
                 <h1>About Julie</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, 
+                <q>There are many variations of passages of Lorem Ipsum available, 
                     but the majority have suffered alteration in some form, by injected humour, 
                     or randomised words which don't look even slightly believable. 
                     If you are going to use a passage of Lorem Ipsary, making this the first 
@@ -102,7 +102,7 @@
                     It uses a dictionary of over 200 Latin words, combined with a handful of 
                     model sentence structures, to generate Lorem Ipsum which looks reasonable. 
                     The generated Lorem Ipsum is therefore always free from repetition, injected humour, 
-                    or non-characteristic words etc.</p>
+                    or non-characteristic words etc.</q>
                     <div class="sub-container">
                         <h3>Subscribe for the lattest review</h3>
                         <div>
